# wscoro

./: .gitignore  CMakeLists.txt  README.md
include/wscoro/: await.h  concepts.h  exception.h  promise.h  suspend.h  task.h  tasktraits.h  traits.h  value.h  wscoro.h
test/: CMakeLists.txt  basic.cpp  concepts.cpp  continue.cpp  generator.cpp  lc-asyncgenerator.txt  lc-generator.txt  lc-immediate.txt  lc-lazy.txt  lc-task.txt  lifecycle-results.h  lifecycle.cpp  suspend.cpp  task.cpp  test.cpp
test/lifecycle/: lc-asyncgenerator.txt  lc-autotask.txt  lc-fireandforget.txt  lifecycle-results.h  lifecycle.cpp
